kustomize/base/matverseny-backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: matverseny-backend
  labels:
    app.kubernetes.io/name: matverseny-backend
    app.kubernetes.io/component: api
spec:
  type: ClusterIP
  ports:
    - port: 3002
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: matverseny-backend
    app.kubernetes.io/component: api
